# Business-Central-Integration-Suite

./: .env.example  .gitignore  README.md  docker-compose.ghcr.yml  docker-compose.yml  使用方法.md
.claude/agents/: al-extension-engineer.md  backend-integration-engineer.md  frontend-ux-engineer.md  microsoft-bc-research.md  qa-cicd-engineer.md  security-architecture-review.md  technical-writer.md
.claude/hooks/: README.md
.claude/skills/al-extension-development/: SKILL.md
.claude/skills/api-integration/: SKILL.md
.claude/skills/business-central-research/: SKILL.md
.claude/skills/cicd-quality/: SKILL.md
.github/workflows/: ci.yml  release.yml
apps/api/: Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  audit.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
apps/api/app/routers/: audit_logs.py  dashboard.py  purchase_requests.py
apps/api/app/services/: business_central_client.py
apps/api/tests/: conftest.py  test_health.py  test_purchase_requests.py
apps/web/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: api.md  architecture.md  interview-guide.md  project-guide.md  research-notes.md  security-notes.md
extensions/bc-procurement/: app.json
outputs/: acceptance.md  audit-report.md  delivery-summary.md  lighthouse-prod.report.html  lighthouse-prod.report.json  lighthouse.report.html  lighthouse.report.json
scripts/: init-dev.ps1  migrate-ports.mjs  smoke-test.ps1
(+66 files in other folders)
