[project]
name = "bcsuite-api"
version = "1.0.0"
description = "Business Central Integration Suite - API"
requires-python = ">=3.11"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["data", "__pycache__", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
